Solve bug css, friend section always displayed on mobile view. Chat z-index modified

--- a/frontend/react_frontend/src/App_Style.css
+++ b/frontend/react_frontend/src/App_Style.css
@@ -37,7 +37,7 @@
 }
 
 .hide {
-    display: none;
+    display: none !important;
 }
 
 .black-bg-responsive {
