--- a/frontend/react_frontend/src/pages/MainApp/Subscriptions/Subscriptions.css
+++ b/frontend/react_frontend/src/pages/MainApp/Subscriptions/Subscriptions.css
@@ -5,7 +5,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: space-around; */
     padding: 0px 100px;
 }
 
@@ -38,11 +37,6 @@
     position: relative;
     transition: 0.1s;
 }
-
-/* .subscription-card:last-of-type {
-    margin-right: 0px;
-
-} */
 
 .card-sub-title {
     color: white;
